# DevTerm

./: .gitmodules  README.md
Code/A04/: devterm-a04-gearbox
Code/A06/: devterm-a06-gearbox
Code/R01/: README.md  d1_twm.tar.bz2  expand_devterm_d1_root.sh
Code/devterm_fan_daemon_cm4/: README.md  temp_fan_daemon.py
Code/devterm_fan_daemon_cpi_a06/: README.md  temp_fan_daemon_a06.py
Code/devterm_fan_daemon_rpi/: README.md  (+1 more)
PCB/: CPI_3.14_Mainboard_V5_Gerber.7z  PCB_Outline_DevTerm_jogball.dxf  PCB_Outline_DevTerm_keyboard.dxf
demo/volume/: CMakeLists.txt  README
demo/volume/include/: main.h  observer.h  space.h  transform.h  x.h
demo/volume/src/: main.c  observer.c  space.c  transform.c  x.c
images/: README.md
wiki/: 7110-dev-board-note.md  Compile-Devterm-CM4-kernel.md  Compile-and-run-devterm-printer.md  Compile-andriod-kernel-for-cm4.md  Compile-keyboard-bootloader-and-firmware.md  Compile-lineage-os-19.1-kernel-for-rpi4(cm4).md  Compile-the-widescreen-version-of-Cave-Story-from-the-source-code.md  Create-DevTerm-A04-OS-image-from-scratch.md  Create-DevTerm-A06-OS-image-from-scratch.md  Create-DevTerm-CM3-OS-image-from-scratch.md  Create-DevTerm-CM4-OS-image-from-scratch.md  Create-DevTerm-R01-OS-image-from-scratch.md  DevTerm-A06-Install-ibus-input-method.md  Devterm-CM3-rpi-os-image.md  Devterm-CM3-ubuntu-server-image.md  Devterm-CM4-GPIO-map.md  Guide-To-Setup-thermal-printer-from-source-code.md  Home.md  How-to-Compile-cool-retro-term-for-DevTerm.md  How-to-compile-DevTerm-CM3-Kernel.md  Keyboard-with-FPC-60pin-0.5mm.md  nmcli-with-gsm.md
(+121 files in other folders)
